# StableCoinMonitoringSystem

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEFILLAMA_INTEGRATION.md  LICENSE  QUICKSTART.md  README.md  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.ps1  test_deviation_integration.ps1  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml
api/: main.py
app/: main.py
apps/backend/: .env  .eslintrc.json  README.md  main.py  nodemon.json  package.json  requirements.txt  start_backend.ps1  test_analytics.py  train_models.ps1  tsconfig.json
apps/backend/api/: server.ts
apps/backend/models/: anomaly_model.pkl  anomaly_model_scaler.pkl  correlation_model.pkl  liquidity_model.pt  liquidity_model_scaler.pkl  risk_model_v1.pkl  stability_model.pkl  (+2 more)
apps/frontend/: README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
docs/: CHARTING_FEATURES.md  COMPONENT-GUIDE.md  IMPLEMENTATION-SUMMARY.md  ML_DEVIATION_FEATURE.md  ML_MODELS.md  ML_QUICKSTART.md  NEWS_API_INTEGRATION.md  SETUP_CHARTING.md  UI-DESIGN-SYSTEM.md  WIREFRAMES.md
docs/api/: README.md
docs/architecture/: overview.md
docs/user-guides/: monitoring-guide.md
infra/database/: README.md
infra/docker/: Dockerfile.backend  Dockerfile.fastapi  Dockerfile.frontend  README.md  docker-compose.yml
infra/terraform/: README.md  main.tf  outputs.tf  resources.tf  variables.tf
scripts/: build.ps1  build.sh  deploy.sh  setup.ps1  setup.sh
(+85 files in other folders)
